--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <button id="button2"  onclick="guess(2)" onmousedown = "startTone(2)"  onmouseup = "stopTone()"></button>
       <button id="button3"  onclick="guess(3)" onmousedown = "startTone(3)"  onmouseup = "stopTone()"></button>  
       <button id="button4"  onclick="guess(4)" onmousedown = "startTone(4)"  onmouseup = "stopTone()"></button>  <!-- content of the buttons are empty cuz we didn't need text on them -->
+      <button id="button5"  onclick="guess(3)" onmousedown = "startTone(3)"  onmouseup = "stopTone()"></button>
+      <button id="button6"  onclick="guess(3)" onmousedown = "startTone(3)"  onmouseup = "stopTone()"></button>
     </div>
     
   </body>
